2016-06-12 (0.12.7)
	Fix infinite loop when printing FUNC with extra args

2016-06-07 (0.12.7)
	Fix memory leak with LINPUT command
	SDL: editor widget now remembers the undo buffer between program runs

2016-06-04 (0.12.7)
	Updated MAP handling for performance
	Updated error message formatting
	Fix error with textScreen sub-command

2016-05-14 (0.12.6)
	Fix to prevent const overwriting another const
	Updated MID and REPLACE for performance
	POINT(0) and POINT(1) values now reset with each program run
	POINT(-x, -y) now provides access to the base screen image. For better
	performance use the IMAGE.SAVE sub command

2016-05-07 (0.12.6)
	Reverted LASTX/LASTY. Data was already accessible via POINT command
	Reverted getPixel from SCREEN for performance. Can still access this by passed -ve x/y values
	Reverted using var V_FUNC handling for int sys vars due to eval issues

2016-04-26 (0.12.6)
	Fixes for unit case sensitivity

2016-04-24 (0.12.6)
	Fixes for RUN/EXEC

2016-04-20 (0.12.6)
	Fixed memory handling issues with UNITs
	Fixed memory issue related to SUB/FUNC pointers

2016-03-29 (0.12.6)
	Removed TICKSPERSEC
	Removed BALLOC, MALLOC and VADR keywords. Removed duplicate ENVIRON
	Removed system constants BPP and VIDADR, OSNAME, LINECHART, BARCHART
	Added TIMESTAMP to return the modified-datetime of a file
	Added LSHIFT and RSHIFT bit shift operators
	SBVER now includes build information
	TICKS now returns millisecond intervals
	Refactor eval() for performance
	Fixed some memory leaks in the ui handler
	Editor now restores cursor when returning from run
	Editor now displays the correct filename in the title bar
	Added "industrial" editor theme from Shian (slot 2)
	Fixed editor highlighting
	Runtime errors now show source screen with red error highlighter
	Form refresh command now takes an boolean arg, true=push ui state to vars
	The IMAGE argument can now be PNG data stored in an INT array
	The IMAGE argument can now be x,y,w,h screen corordinates